[project]
name = "ui"
version = "0.1.0"
description = ""
authors = [
    {name = "manasi"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.42.2,<2.0.0)",
    "sseclient-py (>=1.8.0,<2.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
